--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body{
     else if (hrs >= 12 && hrs <= 17)
         greet = 'Good Afternoon ';
     else if (hrs >= 17 && hrs <= 24)
-        greet = 'Good Evening  ';
+        greet = '*️☾ Good Evening  ';
 
     document.getElementById('lbl').innerHTML =
         greet+=`<div id="date"> It's ${date}</div>`;
