--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body{
     var greet;
 
     if (hrs < 12)
-        greet = 'Good Morning  ';
+        greet = '⋆⸙͎۪۫⋆☼ Good Morning ❀⋆⸙͎۪۫⋆  ';
     else if (hrs >= 12 && hrs <= 17)
         greet = 'Good Afternoon ';
     else if (hrs >= 17 && hrs <= 24)
