--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ body{
     if (hrs < 12)
         greet = '⋆⸙͎۪۫⋆☼ Good Morning ❀⋆⸙͎۪۫⋆  ';
     else if (hrs >= 12 && hrs <= 17)
-        greet = 'Good Afternoon ';
+        greet = 'ʕ•ᴥ•ʔづ Good Afternoon 𓏲 ࣪₊♡𓂃 ';
     else if (hrs >= 17 && hrs <= 24)
         greet = '⋆⁺₊⋆☾ Good Evening ☁︎⋆⁺₊⋆  ';
 
