--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     font-size: xx-large;
     color: #626262;
     padding: 5px;
-    border: 1px solid #white;
+    border: 1px solid #snow;
     text-align: center;
     line-height: 1.5;
     height:85%
